# DATASCI210_Capstone

./: README.md
Ainsley-code/canine-glucose-eks/: .terraform.lock.hcl  README.md  deploy.sh  terraform.tf  variables.tf
Ainsley-code/demo/: demo_upload_data.ipynb
Ainsley-code/deployment/canineglucoseapplication/: pyproject.toml
Ainsley-code/deployment/canineglucoseapplication/.k8s/base/: deployment-redis.yaml  service-cgi-app.yaml  service-redis.yaml
Ainsley-code/deployment/canineglucoseapplication/.k8s/overlays/dev/: secrets-cgi-template.yaml  service-cgi-app-dev.yaml
Ainsley-code/deployment/canineglucoseapplication/.k8s/overlays/prod/: hpa-api.yaml  secrets-cgi-template.yaml  virtual-service-cgi-prod.yaml
Ainsley-code/deployment/canineglucoseapplication/src/: glucose_io.py  observable_glucose_formatting.py  observable_ui_api.py
Ainsley-code/deployment/canineglucoseapplication/src/data_models/: observable_glucose_query_models.py
Ainsley-code/deployment/canineglucoseapplication/tests/integration/: test_integration_glucose_io.py  test_integration_observable_ui_api.py
Ainsley-code/deployment/canineglucoseapplication/tests/unit/: test_glucose_io.py
Ainsley-code/deployment/canineglucoseapplication/tests/unit/data_models/: test_binary_response.py  test_observable_glucose_query_models.py  test_upload_response.py
Ci-code/: 03. baseline_model_safe.ipynb
Ci-code/final_models/: CNN.ipynb
WooJung-code/: Data_prep.ipynb
canine-glucose-eks/: main.tf  outputs.tf
code/: 01. EDA.ipynb  02. Data Prep.ipynb
codes/: Data_cleaning_split.ipynb
(+45 files in other folders)
